--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Proyecto 1 Semana 4 LaunchX NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest",
+    "linter": "node  ./node_modules/eslint/bin/eslint.js .",
+    "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix"
   },
   "author": "Antonio Martin",
   "license": "ISC",
