--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "eslint": "^8.14.0",
     "jest": "^26.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
